tests/fixtures/invalid/indexed_tolerance_axis_mismatch.gcl
// #809: in a tolerance assertion, `expected` (and `tolerance`) must be
// scalar or indexed by exactly `actual`'s axes.
index Case = { A, B };
index Other = { X, Y };

node actual: Length[Case] = {
    Case.A: 1.0 m,
    Case.B: 2.0 m,
};
node wrong: Length[Other] = {
    Other.X: 1.0 m,
    Other.Y: 2.5 m,
};

assert bad = @actual ~= @wrong +/- 0.1 m;
